got go templates to work for custom subsite component finally

--- a/layouts/_default/contact.html
+++ b/layouts/_default/contact.html
@@ -25,13 +25,14 @@
   
     <p>
             Are you a contract worker in tech? If you’re interested in getting more resourced or sharing a story about your contracting experience, we want to hear from you. 
+            Get in contact with us at techcontracting.work@protonmail.com.
     </p>
     <div class="contact-form-container" >
         <hr />
             <h3 style="margin: 0 auto;">Contact Form</h3>
         <hr />
 
-        <form action="mailto:you@yourwebsite.com" 
+        <form action="techcontracting.work@protonmail.com" 
             accept-charset="UTF-8"
             class="contact-form">
     
