--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,13 +6,9 @@
       </div>
       <div class="all-menu expanded standard">
         {{ partial "menu/menu_home" . }}
-        {{ partial "menu/menu_contact" . }}
+        {{ partial "menu/menu_resources" . }}
         {{ partial "menu/menu_kyr" . }}
-        {{ partial "menu/menu_history" . }}
-        {{ partial "menu/menu_reading" . }}
-
-
-   
+        {{ partial "menu/menu_contact" . }}
       </div>
     </nav>
   </div>
