subdomain linking and child parent templates work now

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,7 +7,7 @@
       <div class="all-menu expanded standard">
         {{ partial "menu/menu_home" . }}
         {{ partial "menu/menu_resources" . }}
-        {{ partial "menu/menu_kyr" . }}
+        {{ partial "menu/menu_rights" . }}
         {{ partial "menu/menu_contact" . }}
       </div>
     </nav>
