--- a/layouts/_default/breadcrumb_page.html
+++ b/layouts/_default/breadcrumb_page.html
@@ -1,19 +1,33 @@
-<div class="standard main rounded mt-4 mb-4" role="main">
-    <article class="shadow p-4 border border-secondary rounded position-relative" style="min-height: calc(100vh - 250px)">
-      <h1 class="top-h1">
-        {{- .Page.Title -}}
-      </h1>
 
-      <div>
-          breadcrumb thingy
-          <a href=""> link </a>
-      </div>
 
-      {{ .Content }}
+
+{{ define "main"}}
+  <h1> 
+    test for breadcrumb page: {{ .Page.Title }} 
+  </h1>
+
+  {{ if eq .Page.Title "Reading List" }}
+    reading is here
+    {{ partial "reading.html" . }}
+
+  {{ else }}
+
+  <div class="standard main rounded mt-4 mb-4" role="main">
+      <article class="shadow p-4 border border-secondary rounded position-relative" style="min-height: calc(100vh - 250px)">
+        <h1 class="top-h1">
+          {{- .Page.Title -}}
+        </h1>
   
+        <div>
+            breadcrumb thingy
+            <a href=""> link </a>
+        </div>
   
-    </article>
+          {{ .Content }}
+     
+      </article>
   </div>
 
+  {{ end }}
 
-
+{{ end }}
