assets and home page design

--- a/assets/custom.scss
+++ b/assets/custom.scss
@@ -3,3 +3,11 @@
     margin-right:20px; 
     border-radius: 10%;
 }
+
+.photo-side, .title-side  {
+    width: 50%;
+}
+
+.about-block {
+    display: flex !important;
+}
