--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -1,10 +1,27 @@
 <div class="about-container position-relative">
     <div class="profile-info d-flex flex-column">
-      <div class="profile-photo" style="display: flex; align-items: flex-end;">
-        <img src="{{ .Site.Params.author.profilephoto | relURL }}"
-          class="about-photo"
-        />
+
+      <div class="about-block">
+        <div class="title-side">
+            <h1>Tech Contractor Support Network</h1>
+            <h3>Solidarity, Resources, and Readings</h3>
+        </div>
+        <div class="photo-side">
+            <div class="profile-photo" style="display: flex; align-items: flex-end;">
+              <img src="{{ .Site.Params.author.profilephoto | relURL }}"
+                class="about-photo"/>
+            </div>
+        </div>
+        <div class="bulletin">
+          <h3><a href="./resources/covid">Click for Worker resources for COVID-19</a></h3>
+        </div>
       </div>
+
+      <div class="explainer">
+        <p>We made this site because...</p>
+      </div>
+  
+      
       <div class="d-flex flex-column">
         <h2>CHEAP LABOR</h2>
         <p>
