--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -3,8 +3,8 @@
 
       <div class="about-block">
         <div class="title-side">
-            <h1>Tech Contractor Support Network</h1>
-            <h3>Solidarity, Resources, and Readings</h3>
+            <h1 style="font-size:48px;">Tech Contractor Support Network</h1>
+            <h4>Solidarity, Resources, and Readings</h4>
         </div>
         <div class="photo-side">
             <div class="profile-photo" style="display: flex; align-items: flex-end;">
@@ -12,18 +12,20 @@
                 class="about-photo"/>
             </div>
         </div>
+
+      </div>
+
         <div class="bulletin">
           <h3><a href="./resources/covid">Click for Worker resources for COVID-19</a></h3>
         </div>
-      </div>
 
-      <div class="explainer">
-        <p>We made this site because...</p>
-      </div>
+        <div class="explainer">
+            <p>We made this site because...</p>
+        </div>
   
       
-      <div class="d-flex flex-column">
-        <h2>CHEAP LABOR</h2>
+      <div class="d-flex flex-column explain-titles">
+        <h2>CHEAP LABOR IS THE NEW NORMAL IN TECH</h2>
         <p>
             Contracting has become the new normal in tech, with many large companies having 50% or more of their workforce in contingent roles, and more coming in as shareholders pressure companies to increase their profits every year. Contracting has become a cheap way for companies to size up and down their labor at the expense of people who need work to survive.
         </p>
