--- a/layouts/partials/breadcrumb_nav.html
+++ b/layouts/partials/breadcrumb_nav.html
@@ -1,5 +1,5 @@
-<div>
-        <a href="/"> Home / </a>
-        <a href="{{ .Params.sublink }}"> {{ .Params.subdirectory }} / </a>
-        <span> {{ .Title }} </span>
-    </div>
+<div class="breadcrumb-navbar">
+    <a href="/"> Home / </a>
+    <a href="{{ .Params.sublink }}"> {{ .Params.subdirectory }} / </a>
+    <span> {{ .Title }} </span>
+</div>
