--- a/layouts/_default/breadcrumb_page.html
+++ b/layouts/_default/breadcrumb_page.html
@@ -13,12 +13,7 @@
 
   <div class="standard main rounded mt-4 mb-4" role="main">
       <article class="shadow p-4 border border-secondary rounded position-relative" style="min-height: calc(100vh - 250px)">
-        <h1 class="top-h1">
-          {{- .Page.Title -}}
-        </h1>
-  
-        {{ partial "breadcrumb_nav.html" .}}
-
+         {{ partial "single-header.html" . }}
   
           {{ .Content }}
      
