--- a/layouts/partials/menu/menu_rights.html
+++ b/layouts/partials/menu/menu_rights.html
@@ -1,1 +1,17 @@
-<div class="main-menu"><a href="{{ `/rights` | relURL }}">Know Your Rights</a></div>
+<div class="main-menu">
+
+    <ul>
+        <li>
+            <a href="{{ `/rights` | relURL }}" class="subdir-menu">Know Your Rights</a>
+            <ul class="dropdown">
+                    {{ range where .Site.Pages ".Params.subdirectory" "=" "Rights" }}
+                    <li>
+                        <a href="{{ .Site.BaseURL }}/rights{{ .Params.Link }}"> {{.Params.Title }} </a>
+                    </li>
+                    {{ end }}
+            </ul>
+        </li>
+    </ul>
+</div>
+
+
