--- a/layouts/partials/menu/menu_rights.html
+++ b/layouts/partials/menu/menu_rights.html
@@ -3,10 +3,10 @@
     <ul>
         <li>
             <a href="{{ `/rights` | relURL }}" class="subdir-menu">Know Your Rights</a>
-            <ul class="dropdown">
+            <ul class="dropdown mobile-hide">
                 {{ range where .Site.Pages ".Params.subdirectory" "=" "Rights" }}
                 <li>
-                    <a href="{{ .Site.BaseURL }}/rights{{ .Params.Link }}"> {{.Params.Title }} </a>
+                    <a href="{{ .Site.BaseURL }}rights{{ .Params.Link }}"> {{.Params.Title }} </a>
                 </li>
                 {{ end }}
             </ul>
