--- a/layouts/partials/menu/menu_contact.html
+++ b/layouts/partials/menu/menu_contact.html
@@ -1,1 +1,7 @@
-<div class="main-menu"><a href="{{ `/contact` | relURL }}">Contact</a></div>
+<div class="main-menu">
+    <ul>
+        <li>
+            <a href="{{ `/contact` | relURL }}">Contact</a>
+        </li>
+    </ul>
+</div>
