--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -163,8 +163,9 @@ div.subdir-header {
 
     } */
 
-
-
+.main-menu li {
+    list-style: none;
+}
 
 .main-menu  a {
     color: white !important;
@@ -173,23 +174,40 @@ div.subdir-header {
     text-decoration: none;
   }
 
-  /* sub menu styles - its a big mess :[ */
+  .main-menu ul li ul {
+    display: none;
+    position: absolute;
+    transition: all 0.5s ease;
+    margin-top: 1rem;
+    left: 0;
+  }
+  
 
-  .main-menu li {
+   /*    --media queries--   */
+
+   /*desktop catchall */
+@media screen 
+and (min-device-width: 1200px) 
+and (max-device-width: 1600px) 
+and (-webkit-min-device-pixel-ratio: 1) { 
+
+  .photo-side, .title-side  {
+      width: 50%;
+  }
+
+  .about-photo {
+      margin: 1.5em;
+  }
+
+/* sub menu styles - its a big mess :[ */
+
+.main-menu li {
     display: block;
     transition-duration: 0.5s;
    }
    
    .main-menu li:hover {
      cursor: pointer;
-   }
-   
-   .main-menu ul li ul {
-     display: none;
-     position: absolute;
-     transition: all 0.5s ease;
-     margin-top: 1rem;
-     left: 0;
    }
    
    .main-menu ul li:hover > ul,
@@ -272,21 +290,6 @@ div.subdir-header {
 
    /*  ------------------ */
 
-   /*    --media queries--   */
-
-   /*desktop catchall */
-@media screen 
-and (min-device-width: 1200px) 
-and (max-device-width: 1600px) 
-and (-webkit-min-device-pixel-ratio: 1) { 
-
-  .photo-side, .title-side  {
-      width: 50%;
-  }
-
-  .about-photo {
-      margin: 1.5em;
-  }
 }
 
 /* mobile catchall */
